# wcbot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
sample/: CMakeLists.txt  main.cc
sample/Job/: EchoCallbackJob.cc  EchoCallbackJob.h  QBJob.cc  QBJob.h
src/: CMakeLists.txt
src/Codec/: Codec.h  CodecHttp.cc  CodecHttp.cpp  CodecHttp.h  HttpCodec.cc  HttpCodec.h
src/Core/: Engine.cc  Engine.cpp  Engine.h  EngineImpl.cc  EngineImpl.cpp  EngineImpl.h  ITC.cc  ITC.cpp  ITC.h  MemoryBuffer.cc  MemoryBuffer.cpp  MemoryBuffer.h  TcpMemoryBuffer.h  TcpUvBuffer.h  TimeQueue.cc  TimeQueue.h  TimeWheel.cc  TimeWheel.h  UvBuffer.cpp  UvBuffer.h  UvBufferTcp.h  WorkerThread.cc  WorkerThread.cpp  WorkerThread.h
src/Job/: CallbackMessageJob.cc  CallbackMessageJob.h  DelayQueue.cc  DelayQueue.h  GetChatInfoJob.cc  GetChatInfoJob.h  HttpClientJob.cc  HttpClientJob.h  HttpHandlerJob.cc  HttpHandlerJob.h  Job.cc  Job.h  MessageCallbackJob.cc  MessageCallbackJob.h  SilentPushJob.cc  SilentPushJob.h  TcpHandlerJob.cc  TcpHandlerJob.cpp  TcpHandlerJob.h  WeComUploadJob.cc  WeComUploadJob.h
src/Utility/: Common.cc  Common.cpp  Common.h  CronTrigger.cc  CronTrigger.h  HttpPackage.cc  HttpPackage.h  Logger.cc  Logger.cpp  Logger.h  MemoryBuffer.cc  MemoryBuffer.h  SyncFileLogger.cc  SyncFileLogger.h  TcpMemoryBuffer.h
src/WeCom/: AttachmentClientMessage.cc  AttachmentClientMessage.h  ClientMessage.cc  ClientMessage.h  ClientMessageImpl.cc  ClientMessageImpl.h  EventClientMessage.cc  EventClientMessage.h  FileServerMessage.cc  FileServerMessage.h  ImageClientMessage.cc  ImageClientMessage.h  ImageServerMessage.cc  ImageServerMessage.h  MarkdownServerMessage.cc  MarkdownServerMessage.h  Message.cc  MiniProgramServerMessage.cc  MiniProgramServerMessage.h  MixedClientMessage.cc  MixedClientMessage.h  NewsServerMessage.cc  NewsServerMessage.h  ServerMessage.cc  ServerMessage.h  TextClientMessage.cc  TextClientMessage.h  TextServerMessage.cc  TextServerMessage.h
