CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(wcbotd)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

INCLUDE_DIRECTORIES(.)
IF (APPLE)
    INCLUDE_DIRECTORIES(/usr/local/include)
    LINK_DIRECTORIES(/usr/local/lib)
ENDIF()

SET(COMP_FILES  main.cc Job/QBJob.cc Job/EchoCallbackJob.cc)
ADD_EXECUTABLE(wcbotd ${COMP_FILES})
TARGET_LINK_LIBRARIES(wcbotd wcbot uv pthread curl ssl crypto)
